--- a/project-no1/src/app/app.component.html
+++ b/project-no1/src/app/app.component.html
@@ -1,7 +1,8 @@
+<!-- idela file for layout-->
 <app-header></app-header>
 
 <main class="container mt-5 pt-2">
-  <h1>Success!</h1>
+  <router-outlet></router-outlet>
 </main>
 
 <app-footer></app-footer>
