--- a/project-no1/src/app/shared/components/menu-list/menu-list.component.html
+++ b/project-no1/src/app/shared/components/menu-list/menu-list.component.html
@@ -1,14 +1,10 @@
 <ul class="navbar-nav me-auto mb-2 mb-md-0">
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/concepts">Concepts</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/about">About</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" routerLink="/contact">Contact</a>
+  <li class="nav-item" *ngFor="let menu of menus">
+    <a 
+      class="nav-link" aria-current="page" 
+      [routerLink]="menu.url"
+      routerLinkActive="active"
+      [routerLinkActiveOptions]="{exact: true}"
+      >{{menu.title}}</a>
   </li>
 </ul>
