--- a/project-no1/src/app/users/components/add-user/add-user.component.html
+++ b/project-no1/src/app/users/components/add-user/add-user.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <!-- Step 3: patchup form tag with the FormGroup in ts -->
-    <form class="col-md-6 offset-md-3" [formGroup]="addUserForm">
+    <form class="col-md-6 offset-md-3" [formGroup]="addUserForm" (ngSubmit)="handleAddUser()">
       <!-- step 7: work on submission flow -- ref ts for step 8-->
       <div class="form-group row mb-3">
         <label for="staticName" class="col-sm-2 col-form-label">Name</label>
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <div class="alert alert-success">
+      <div class="alert alert-success" *ngIf="isSaved">
         Saved Successfully
       </div>
 
