--- a/project-no1/src/app/shared/components/header/header.component.html
+++ b/project-no1/src/app/shared/components/header/header.component.html
@@ -8,5 +8,6 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <app-menu-list></app-menu-list>
     </div>
+    <button type="button" class="btn btn-danger">Cart ({{cartCount}})</button>
   </div>
 </nav>
