--- a/project-no1/src/app/app.component.html
+++ b/project-no1/src/app/app.component.html
@@ -2,6 +2,8 @@
 <app-header></app-header>
 
 <main class="container mt-5 pt-2">
+  <h1>Success!</h1>
+  <h2>Wow</h2>
   <router-outlet></router-outlet>
 </main>
 
